--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,13 @@
 name: Actions
 on: 
-  push: 
-    branches:
-      - main
+  # push: 
+  #   branches:
+  #     - main
 
+  pull_request:
+    branch:
+      -main
+    types: [ closed ]
 
 jobs:
   build:
